[4] Complete exercise 4 (again)
I edited some comments in the notebook to reflect the changes in the
results, after the errors were corrected.
I think there is nothing else to say about this exercise.

--- a/exercise04/exercise04.ipynb
+++ b/exercise04/exercise04.ipynb
@@ -329,9 +329,9 @@
    "source": [
     "###### All three energy plots together\n",
     "From the plots above it would seem that the total energy $E$ (which should be conserved!) fluctuates in a strange way.\n",
-    "However we can see that the fluctuations occur on the fourth, or possibly the fifth, significant digit, and in fact, if we plot the total energy together with the potential $U$ and kinetic energy $T$, we see that with respect to the fluctuations of $U$ and $K$ those of $E$ are really negligible.\n",
-    "It would seem, after all, that the total energy is really (approximately, of course) conserved.\n",
-    "The plots below also show how the variations of $U$ and $T$ oppose each other."
+    "However we can see, plotting the total energy together with the potential $U$ and kinetic energy $T$, that with respect to the fluctuations of $U$ and $K$ those of $E$ are really negligible.\n",
+    "It would seem, after all, that the total energy is really (approximately, of course) conserved during the simulation.\n",
+    "The plots below also show how the variations of $U$ and $T$ are opposite to each other."
    ]
   },
   {
