[7] Complete exercise 7 (again)
I added an explanation on the difference between the two tyes of
simulations, and on how the results of each can be compared.
I believe this exercise is complete, now.

--- a/exercise07/exercise07.ipynb
+++ b/exercise07/exercise07.ipynb
@@ -365,6 +365,7 @@
    "source": [
     "### Exercise 07.4\n",
     "In the following plots I will compare the results from the simulations with the Metropolis sampling algorithm against the results obtained with the Verlet integration algorithm.\n",
+    "While the Metropolis algorithm simulates a system kept at a fixed temperature, it is the energy that is conserved in the Verlet algorithm. In order to obtain comparable results, the latter simulation is initialised (conveniently rescaling the velocities at the beginning) at the same temperature as the former.\n",
     "\n",
     "To obtain the results with the Verlet integration algorithm, run `./exercise07-4_verlet phase` while in the `exercise07-4` directory (`phase` must be chosen from the list in the cell below, e.g. you may run `./exercise07-4_verlet liquid`).\n",
     "To obtain the results with the Metropolis sampling algorithm, run `./exercise07-4_metropolis phase`, with the same syntax as the other program.\n",
@@ -613,13 +614,6 @@
    "source": [
     "The radial distribution functions obtained with the two algorithms share the same qualitative features (especially for the solid phase): their extrema lie approximately at the same positions, they the difference being that the function from the Metropolis algorithm appears to be a smoother line (this can be seen especially in the plots of the gaseous phase)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
